# LLM-open-source-project-analysis

./: README.md  fetch-data.py  pyproject.toml
data/: github_repos_data.csv  sample-data.csv
notebooks/: 001_Data collection_cleaning.ipynb  002_Feature_engineering.ipynb  003_Visulizations_Stats.ipynb  004_ML models.ipynb
streamlit/: app.py
